--- a/index.html
+++ b/index.html
@@ -1,19 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Weather Project</title>
-</head>
-<body>
-    
-
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <!--nav from bootstrap-->
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavDropdown"
+              aria-controls="navbarNavDropdown"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About me</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Project</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <!--nav from bootstrap-->
+      </div>
+    </header>
+    <section class="main p-2">
+      <div class="container">
+        <h2 class="h1 text-center">API project for weather</h2>
+        <div class="search-box mt-4 p-4">
+          <form class="d-flex" action="">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+        <div class="result mt-3 shadow">
+          <div class="row">
+            <div class="col-12 col-lg-6">
+              <div class="weather-field text-center">
+                <h3 class="h2 my-2">Weather</h3>
+                <div></div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-6">
+              <div class="information-field text-center">
+                <h3 class="h2 my-2">Informaition</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="./js/jQuery.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/custom.js"></script>
-</body>
+  </body>
 </html>
