--- a/index.html
+++ b/index.html
@@ -1,105 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Weather Project</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <!--nav from bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNavDropdown"
-              aria-controls="navbarNavDropdown"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About me</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Project</a>
-                </li>
-              </ul>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Weather Project</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <!--nav from bootstrap-->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Project</a>
+              </li>
+            </ul>
           </div>
-        </nav>
-        <!--nav from bootstrap-->
-      </div>
-    </header>
-    <section class="main p-2">
-      <div class="container">
-        <h2 class="h1 text-center">API project for weather</h2>
-        <div class="search-box mt-4 p-4">
-          <form class="d-flex search-form" >
-            <input
-              class="form-control search-city me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <input class="btn btn-search shadow-lg" type="submit" value="submit"></input>
-          </form>
         </div>
-        <div class="result mt-3 shadow">
-          <div class="row">
-            <div class="col-12 col-lg-6">
-              <div class="weather-field text-center">
-                <h3 class="h2 my-2">Weather</h3>
-                <div class="weather-information">
-                    <div class="container">
-                        <div class="d-flex flex-column">
-                            <div class="my-2 weather-cf95 ">
-                                <div>Name</div>
-                                <div class="weather-name"></div>
-                            </div>
-                            <div class="my-2 weather-cf95 ">
-                                <div>Description</div>
-                                <div class="weather-decription"></div>
-                            </div>
-                            <div class="my-2 weather-cf95 ">
-                                <div>Temp</div>
-                                <div class="weather-temp"></div>
-                            </div>
-                            <div class="my-2 weather-cf95 ">
-                                <div>Humidity</div>
-                                <div class="weather-humidity"></div>
-                            </div>
-                        </div>
+      </nav>
+      <!--nav from bootstrap-->
+    </div>
+  </header>
+  <section class="main p-2">
+    <div class="container">
+      <h2 class="h1 text-center">API project for weather</h2>
+      <div class="search-box mt-4 p-4">
+        <form class="d-flex search-form">
+          <input class="form-control search-city me-2" type="search" placeholder="Search" aria-label="Search" />
+          <input class="btn btn-search shadow-lg" type="submit" value="submit"></input>
+        </form>
+      </div>
+      <div class="result mt-3 shadow">
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div class="weather-field text-center">
+              <h3 class="h2 my-2">Weather</h3>
+              <div class="weather-information">
+                <div class="container">
+                  <div class="d-flex flex-column">
+                    <div class="my-2 weather-cf95 ">
+                      <div>Name</div>
+                      <div class="weather-name"></div>
                     </div>
+                    <div class="my-2 weather-cf95 ">
+                      <div>Description</div>
+                      <div class="weather-description"></div>
+                    </div>
+                    <div class="my-2 weather-cf95 ">
+                      <div>Temp</div>
+                      <div class="weather-temp"></div>
+                    </div>
+                    <div class="my-2 weather-cf95 ">
+                      <div>Humidity</div>
+                      <div class="weather-humidity"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-6">
-              <div class="information-field text-center">
-                <h3 class="h2 my-2">Informaition</h3>
-                <div class="infoo"></div>
-              </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="information-field text-center">
+              <h3 class="h2 my-2">Informaition</h3>
+              <div class="infoo"></div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <script src="./js/jQuery.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/custom.js"></script>
-  </body>
+  <script src="./js/jQuery.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/custom.js"></script>
+</body>
+
 </html>
